fix buttons on mobile view

--- a/scss/pages/_financial.scss
+++ b/scss/pages/_financial.scss
@@ -5,6 +5,11 @@
 
     @media (max-width: $screen-xs-min) {
     	width: calc(50% - 5px);
+
+      &:last-of-type {
+        width: 50%;
+        margin-left: 0;
+      }
     }
 }
 
